--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^1.1.5",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "moment": "^2.29.1",
+    "nuxt": "^2.15.3",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
