--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.9.1",
     "moment": "^2.29.1",
     "nuxt": "^2.15.3",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue2-daterange-picker": "^0.6.5"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
