--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.9.1",
     "moment": "^2.29.1",
     "nuxt": "^2.15.3",
+    "v-calendar": "^2.3.0",
     "vue": "^2.6.12",
     "vue2-daterange-picker": "^0.6.5"
   },
